public interface DatosArbol {
    public String getInfo();
}
